<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity </string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="subjek">Just java order for</string>
    <string name="lebih">"You can't have more than 100 coffees"</string>
    <string name="kurang">"You can't have less than 1 coffees"</string>
    <string name="nama">Name</string>

    <string name="order_summary_name" translatable="false"><xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="thank_you">Thank You!</string>

</resources>
