<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/nama"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            android:layout_marginLeft="5dp"/>


        <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="?android:textAppearanceMedium"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="5dp"
                android:padding="8dp"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:onClick="increment"
                android:text="+" />


        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>
</ScrollView>